se modifica validacion de impuestos

--- a/app_modules/FacturacionClientes/reports/reporteDetalleDespacho.html
+++ b/app_modules/FacturacionClientes/reports/reporteDetalleDespacho.html
@@ -134,7 +134,7 @@
                 <td>{{:cantidad}}</td>
                 <td>{{:lote}}</td>
                 <td>{{:fecha_vencimiento}}</td>
-                <td>{{:cantidad}}</td>
+                <td>{{:porcentaje_gravamen}}</td>
                 <td>{{:valor_unitario_2}}</td>
                 <td>{{:valor_unitario_iva_2}}</td>
                 <td>{{:valor_total_iva_2}}</td>               
