--- a/app_modules/Notas/reports/notaFactura.html
+++ b/app_modules/Notas/reports/notaFactura.html
@@ -155,9 +155,9 @@
                         <td width='12%'>{{:codigo_producto}}</td>
                         <td width='30%'>{{:descripcion}}</td>
                         <td width='30%'>{{:observacion}}</td>
-                        <td width='8%'>{{:cantidad}}</td>
-                        <td width='10%'>{{:valor_unitario}}</td>
-                        <td width='10%'>{{:subtotal}}</td>
+                        <td width='8%'>{{:cantidad_devuelta}}</td>
+                        <td width='10%'>${{:valor_unitario}}</td>
+                        <td width='10%'>${{:subtotal}}</td>
                     </tr>
                     {{/for}}
                 </table>
