creacion de nota devolucion

--- a/app_modules/Notas/reports/notaFactura.html
+++ b/app_modules/Notas/reports/notaFactura.html
@@ -156,7 +156,7 @@
                         <td width='30%'>{{:descripcion}}</td>
                         <td width='30%'>{{:observacion}}</td>
                         <td width='8%'>{{:cantidad_devuelta}}</td>
-                        <td width='10%'>${{:valor_unitario}}</td>
+                        <td width='10%'>{{:valor_unitario}}</td>
                         <td width='10%'>${{:subtotal}}</td>
                     </tr>
                     {{/for}}
