--- a/app_modules/Notas/reports/notaFactura.html
+++ b/app_modules/Notas/reports/notaFactura.html
@@ -198,7 +198,7 @@
                             <tr>
                                 <td WIDTH="31.3%"><table align="center" width="100%" class="modulo_list_claro" style="border:0px solid #000000;font-size:7px">
                                         <tr>
-                                            <td align="left">ELABORADO : </td>
+                                            <td align="left">ELABORADO : {{:usuario}}</td>
                                         </tr>
                                         <tr>
                                             <td align="center">
