correcion de consulta para facturas consumo

--- a/app_modules/FacturacionClientes/reports/facturaGeneradaDetalle.html
+++ b/app_modules/FacturacionClientes/reports/facturaGeneradaDetalle.html
@@ -30,7 +30,7 @@
                 </table>
                 </TD>
                 <TD width='100%' align='center' valign='center' rowspan='2'>
-                    <table width="70%" align="center"  style="font-family: sans_serif, Verdana, helvetica, Arial; font-weight:bold;font-size:20pt" rules="all">
+                    <table width="90%" align="center"  style="font-family: sans_serif, Verdana, helvetica, Arial; font-weight:bold;font-size:20pt" rules="all">
                         
                         <tr class="label">
                             <td align="center"> <B>{{:cabecera.texto2}} </B></td>
@@ -39,11 +39,11 @@
                             <td align="center"> <b>{{:cabecera.texto3}}</b> </td>
                         </tr>
                         <tr class="label">
-                            <td align="center"> {{:cabecera.texto1}}</td>
+                            <td align="justify"> {{:cabecera.texto1}}</td>
                         </tr>
                     </table>
                 </TD>
-                <TD rowspan='2'><img  src="{{:serverUrl}}images/DispensacionHc/ISO.png" align='rigth' border=0></TD>
+                <TD rowspan='2'><img  src="{{:serverUrl}}images/ICONTEC.jpg" align='rigth' border=0></TD>
             </TR>
         </TABLE>
         <BR>
@@ -99,7 +99,7 @@
                 <td>F.VTO</td>
                 <td>LOTE</td>
                 <td>CUM</td>
-                <td>CODIGO INVIMA</td>
+                <td>INVIMA</td>
                 <td>CANTIDAD</td>
                 <td>VALOR UNIT</td>
                 <td>VALOR IVA</td>
