--- a/app_modules/DispensacionHc/reports/medicamentosDispensados.html
+++ b/app_modules/DispensacionHc/reports/medicamentosDispensados.html
@@ -87,7 +87,7 @@
                         <td width="13%" ><U>CODIGO</U></td> //-->
                         <td  ><U>MEDICAMENTO</U></td>
                         <td width="5%" ><U>CANT</U></td>
-                      <!--  <td width="13%" ><U>FECHA VENC</U></td> //-->
+                        <td width="13%" ><U>FECHA VENC</U></td> //
                         <td width="13%" ><U>LOTE</U></td>
                   </tr>
 
@@ -97,7 +97,7 @@
                                 <td >{{:codigo_producto}}</td>//-->
                                 <td  >{{:descripcion_prod}}</td>
                                 <td >{{:numero_unidades}}</td>
-                               <!-- <td >{{:fecha_vencimiento}}</td> //-->
+                                <td >{{:fecha_vencimiento}}</td> //
                                 <td >{{:lote}}</td>
                                 <td>{{:total}}</td>
                             </tr>
