--- a/app_modules/FacturacionClientes/reports/facturaGeneradaDetallePDF.html
+++ b/app_modules/FacturacionClientes/reports/facturaGeneradaDetallePDF.html
@@ -6,27 +6,29 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>&nbsp;</title>
-        <link href="{{:serverUrl}}stylesheets/DispensacionHc/style-print.css" rel=stylesheet type=text/css media="print">
-            <!--<link rel="stylesheet" href="{{:style}}" />-->       
-            <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css' /> 
+                <!--<link href="{{:serverUrl}}stylesheets/facturacion/style-print.css" rel=stylesheet type=text/css media="print">-->
+                    <link rel="stylesheet" href="{{:style}}" />       
+                    <!--<link href='{{:serverUrl}}stylesheets/facturacion/style.css' rel='stylesheet' type='text/css' />--> 
     </head>
     <body>
-        <table width='100%' border='1' cellpadding='4' cellspacing='0'>
+        <footer>
+         <table width='100%' border='1' cellpadding='4' cellspacing='0'>
             <tr border='0'>
                 <td width='10%' align='center' style="font-family: sans_serif, Verdana, helvetica, Arial; font-size:5.5pt">
-                    <img  src="{{:serverUrl}}images/DispensacionHc/logocliente1.png" align='left' border=0 width="100px" height="50px">
-                    <h5> {{:cabecera.tipo_id_empresa}}: {{:cabecera.id}}- {{:cabecera.digito_verificacion}}</h5>   
-                    <h5> {{:cabecera.direccion_empresa}} TELEFONO : {{:cabecera.telefono_empresa}}</h5>   
-                    <h5> {{:cabecera.pais_empresa}} - {{:cabecera.departamento_empresa}} - {{:cabecera.municipio_empresa}}</h5>   
+                    <img  src="{{:serverUrl}}images/logo.png" align='left' border=0 width="100px" height="50px">
+                        <h5> {{:cabecera.tipo_id_empresa}}: {{:cabecera.id}}- {{:cabecera.digito_verificacion}}</h5>   
+                        <h5> {{:cabecera.direccion_empresa}} TELEFONO : {{:cabecera.telefono_empresa}}</h5>   
+                        <h5> {{:cabecera.pais_empresa}} - {{:cabecera.departamento_empresa}} - {{:cabecera.municipio_empresa}}</h5>   
                 </td>
                 <td width='60%' align="center" style="font-family: sans_serif, Verdana, helvetica, Arial; font-size:6pt">
-                    <h3 class="label"><B>{{:cabecera.texto2}} </B><B>{{:cabecera.texto3}} </B></h3>
-                    <h4 class="label" align="justify">{{:cabecera.texto1}}</h4>
+                    <h2 class="label"><B>{{:cabecera.texto2}} </B><B>{{:cabecera.texto3}} </B></h3>
+                        <h4 class="label" align="justify">{{:cabecera.texto1}}</h4>
 
                 </td>
-                <td><img  src="{{:serverUrl}}images/ICONTEC.jpg" align='rigth' width="50px" height="100px"></td>
+                <td><img  src="{{:serverUrl}}images/iso2015.png" align='rigth' width="50px" height="100px"></td>
             </tr>
         </table>
+            </footer>
         <br>
             <table width='100%' border='1' cellpadding='4' cellspacing='0'>
                 <!--                        <table width="100%" align="center" style="border:1px solid #000000;" >-->
@@ -208,6 +210,7 @@
                                     </td>
                                 </tr>
                             </table>
+                            <img  src="{{:serverUrl}}images/logo.png" align='left' border=0 width="100px" height="50px" style="display:none">
                             </BODY>
                             </HTML>
 
