formatos pdfs para nota

--- a/app_modules/Notas/reports/notaFacturaPdf.html
+++ b/app_modules/Notas/reports/notaFacturaPdf.html
@@ -62,9 +62,9 @@
         </style>
     </head>
     <body>
-        <TABLE width='100%' border=1 cellpadding='4' cellspacing='4'>
-            <TR>
-                <TD width='20%' align='center' valign='center' rowspan='2'>
+        <table width='100%' border=1 cellpadding='4' cellspacing='4'>
+            <tr>
+                <td width='20%' align='center' valign='center' rowspan='2'>
                     <table width="20%" align="center"  style="font-size: 10px; line-height: 1;" rules="all">
                         <tr align="center">
                             <td ><img  src="{{:serverUrl}}images/DispensacionHc/logocliente1.png" align='left' border=0></td>
@@ -79,11 +79,11 @@
                             <td align="center"> {{:empresa.municipio}} {{:empresa.departamento}}</td>
                         </tr>
                     </table>
-                </TD>
-                <TD width='70%' align='center' valign='center'></TD>
-                <TD><img  src="{{:serverUrl}}images/DispensacionHc/ISO.png" align='center' border=0></TD>
-            </TR>
-        </TABLE>
+                </td>
+                <td width='70%' align='center' valign='center'></td>
+                <td><img  src="{{:serverUrl}}images/DispensacionHc/ISO.png" align='center' border=0></td>
+            </tr>
+        </table>
         <br>
             <table width="100%" align="center">
                 <tr>
