modificacion de json

--- a/app_modules/Notas/reports/notaFacturaPdf.html
+++ b/app_modules/Notas/reports/notaFacturaPdf.html
@@ -62,29 +62,20 @@
         </style>
     </head>
     <body>
-        <table width='100%' border=1 cellpadding='4' cellspacing='4'>
+<!--        <table width='100%' border=1 cellpadding='4' cellspacing='0'>
             <tr>
-                <td width='20%' align='center' valign='center' rowspan='2'>
-                    <table width="20%" align="center"  style="font-size: 10px; line-height: 1;" rules="all">
-                        <tr align="center">
-                            <td ><img  src="{{:serverUrl}}images/DispensacionHc/logocliente1.png" align='left' border=0></td>
-                        </tr>
-                        <tr >
-                            <td align="center"> {{:empresa.tipo_id_tercero}} {{:empresa.id}}</td> <!--falta digito de verificacion -->
-                        </tr>
-                        <tr class="label">
-                            <td align="center"> {{:empresa.direccion}} TELEFONO : {{:empresa.telefonos}}</td>
-                        </tr>
-                        <tr class="label">
-                            <td align="center"> {{:empresa.municipio}} {{:empresa.departamento}}</td>
-                        </tr>
-                    </table>
+                <td width='20%' align='center' style="font-family: sans_serif, Verdana, helvetica, Arial; font-size:6pt">
+                    <h5> {{:empresa.tipo_id_tercero}} {{:empresa.id}}</h5> 
+                    <h5> {{:empresa.direccion}} TELEFONO : {{:empresa.telefonos}}</h5>
+                    <h5> {{:empresa.municipio}} {{:empresa.departamento}}</h5>
                 </td>
-                <td width='70%' align='center' valign='center'></td>
-                <td><img  src="{{:serverUrl}}images/DispensacionHc/ISO.png" align='center' border=0></td>
+                <td width='60%' align='center' valign='center' rowspan='2'>
+                   <img  src="{{:serverUrl}}images/logocliente.png" align='center' border=0 width="200px" height="80px">
+                </td>
+                <td></td>
             </tr>
-        </table>
-        <br>
+        </table>       
+        <br>-->
             <table width="100%" align="center">
                 <tr>
                     <td align='center' style="border:1px solid #000000;font-size:8px">
