insercion de imagen en formatos pdf

--- a/app_modules/Notas/reports/notaFacturaSinProductoPdf.html
+++ b/app_modules/Notas/reports/notaFacturaSinProductoPdf.html
@@ -62,7 +62,7 @@
         </style>
     </head>
     <body>
-        <TABLE width='100%' border=1 cellpadding='4' cellspacing='4'>
+<!--        <TABLE width='100%' border=1 cellpadding='4' cellspacing='4'>
             <TR>
                 <TD width='20%' align='center' valign='center' rowspan='2'>
                     <table width="20%" align="center"  style="font-size: 10px; line-height: 1;" rules="all">
@@ -70,7 +70,7 @@
                             <td ><img  src="{{:serverUrl}}images/DispensacionHc/logocliente1.png" align='left' border=0></td>
                         </tr>
                         <tr >
-                            <td align="center"> {{:empresa.tipo_id_tercero}} {{:empresa.id}}</td> <!--falta digito de verificacion -->
+                            <td align="center"> {{:empresa.tipo_id_tercero}} {{:empresa.id}}</td> falta digito de verificacion 
                         </tr>
                         <tr class="label">
                             <td align="center"> {{:empresa.direccion}} TELEFONO : {{:empresa.telefonos}}</td>
@@ -84,7 +84,7 @@
                 <TD><img  src="{{:serverUrl}}images/DispensacionHc/ISO.png" align='center' border=0></TD>
             </TR>
         </TABLE>
-        <br>
+        <br>-->
             <table width="100%" align="center">
                 <tr>
                     <td align='center' style="border:1px solid #000000;font-size:8px">
