--- a/app_modules/Notas/reports/notaFacturaPdf.html
+++ b/app_modules/Notas/reports/notaFacturaPdf.html
@@ -81,18 +81,12 @@
                         <table border='0' width='100%' style="font-size: 8px; line-height: 0; height:10px;">
                             <tr >
                                 <td align='center' height='10px'>
-                                    <b>NOTA {{:parametros.nombreNota}}</b>
-                                </td>
-                                <td  align='left' height='10px' >
-                                    <b>No:{{:parametros.numeroNota}}</b>			
+                                    <b>FACTURA: {{:nota.prefijo}} - {{:nota.factura_fiscal}}</b>
                                 </td>
                             </tr>
                             <tr>
-                                <td  align='left' height='10px' >
-                                    <b>FACTURA No: {{:nota.prefijo}} - {{:nota.factura_fiscal}}</b>
-                                </td>
-                                <td  align='left' height='10px' >
-                                    <b>FECHA FACTURA {{:nota.fecha_registro}}</b>
+                                <td  align='center' height='10px' >
+                                    <b>FECHA {{:nota.fecha_registro}}</b>
                                 </td>
                             </tr>
                         </table>
