--- a/app_modules/Notas/reports/notaFacturaSinProductoPdf.html
+++ b/app_modules/Notas/reports/notaFacturaSinProductoPdf.html
@@ -65,7 +65,7 @@
             <table width="100%" align="center">
                 <tr>
                     <td align='center' style="border:1px solid #000000;font-size:8px">
-                        <table border='0' width='100%' style="font-size: 8px; line-height: 0; height:10px;">
+                        <table border='0' width='100%' style="font-size: 8px; height:10px;">
                             <tr>
                                 <td>CLIENTE: </td>
                                 <td>{{:cliente.nombre_tercero}} </td>
@@ -108,7 +108,7 @@
                 </tr>
 
             </table>
-            <br>	
+            <br />	
                 <table width="100%" align="center" style="border:1px solid #000000;font-size:8px" rules="all">
                     <tr class="label">
                         <td align="center" colspan="6">CONCEPTO</td>
@@ -117,7 +117,7 @@
                         <td align="center" colspan="6">{{:nota.descripcion}}</td>
                     </tr>
                 </table>
-                <br>
+                <br />
                     <table width="100%" align="center" style="border:1px solid #000000;font-size:8px" >
 
                         <tr class="label" align="center">
@@ -125,34 +125,34 @@
                                 <table width="100%" align="center" style="font-size:8px" >
 
                                     <tr align="center">
-                                        <td><B>SUBTOTAL</B></td>
-                                        <td><B>IVA</B></td>
-                                        <td><B>RET-FTE</B></td>
-                                        <td><B>RETE-ICA</B></td>
-                                        <td><B>RETE-IVA</B></td>
-                                        <td><B>VALOR TOTAL</B></td>
+                                        <td><b>SUBTOTAL</b></td>
+                                        <td><b>IVA</b></td>
+                                        <td><b>RET-FTE</b></td>
+                                        <td><b>RETE-ICA</b></td>
+                                        <td><b>RETE-IVA</b></td>
+                                        <td><b>VALOR TOTAL</b></td>
                                     </tr>
                                     <tr align="center">
-                                        <td><B>${{:valores.subTotal}}</B></td>
-                                        <td><B>${{:valores.ivaTotal}}</B></td>
-                                        <td><B>${{:valores.retencionFuente}}</B></td>
-                                        <td><B>${{:valores.retencionIca}}</B></td>
-                                        <td><B>${{:valores.retencionIva}}</B></td>
-                                        <td><B>${{:valores.totalFactura}}</B></td>
+                                        <td><b>${{:valores.subTotal}}</b></td>
+                                        <td><b>${{:valores.ivaTotal}}</b></td>
+                                        <td><b>${{:valores.retencionFuente}}</b></td>
+                                        <td><b>${{:valores.retencionIca}}</b></td>
+                                        <td><b>${{:valores.retencionIva}}</b></td>
+                                        <td><b>${{:valores.totalFactura}}</b></td>
 
                                     </tr>
                                     <tr align="left">
-                                        <td colspan="6"><B>SON: {{:valores.totalFacturaLetra}} pesos</B></td></tr> <!--valor en letras -->
+                                        <td colspan="6"><b>SON: {{:valores.totalFacturaLetra}} pesos</b></td></tr> <!--valor en letras -->
                                 </table>			
                             </td>
                         </tr>
                     </table>
                     <br />
-                    <br>	
+                    <br />	
                         <table width="100%" align="center" style="border:0px solid #000000;font-size:7px" >
 
                             <tr>
-                                <td WIDTH="31.3%"><table align="center" width="100%" class="modulo_list_claro" style="border:0px solid #000000;font-size:7px">
+                                <td width="31.3%"><table align="center" width="100%" class="modulo_list_claro" style="border:0px solid #000000;font-size:7px">
                                         <tr>
                                             <td align="left">ELABORADO : {{:usuario}}</td>
                                         </tr>
