--- a/app_modules/FacturacionClientes/reports/facturaGeneradaDetallePDF.html
+++ b/app_modules/FacturacionClientes/reports/facturaGeneradaDetallePDF.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>&nbsp;</title>   
-        <link href='{{:serverUrl}}stylesheets/facturacion/style.css' rel='stylesheet' type='text/css' /> 
+        <!--<link href='{{:serverUrl}}stylesheets/facturacion/style.css' rel='stylesheet' type='text/css' />--> 
         <style>
             body    { font-family: sans_serif;
                       font-size: 2px;
